// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default reporter dryRunEnd Simple case: 1 blocking test to trigger 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
"
`;

exports[`Default reporter dryRunEnd With all config options 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Fail on timeout: [1mfalse[22m
• Fail on missing tests: [1mtrue[22m
• Fail on critical errors: [1mtrue[22m
• Selective rerun: [1mtrue[22m
• Tunnel: [1menabled[22m
• Batch timeout: [1m120000[22mms
"
`;

exports[`Default reporter dryRunEnd With default overrides 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Default overrides applied to all tests: [90mstartUrl, body[39m
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
"
`;

exports[`Default reporter dryRunEnd With onDemandConcurrencyCap set 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
"
`;

exports[`Default reporter dryRunEnd With skipped tests 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m2[22m tests
• [1m1[22m skipped
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
"
`;

exports[`Default reporter dryRunEnd With tests not found and not authorized 1`] = `
"[33m[1m1[22m test not found[39m [90m(aaa-aaa-aaa)[39m

[31m[1m2[22m tests not authorized[39m [90m(bbb-bbb-bbb, ccc-ccc-ccc)[39m

[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
"
`;

exports[`Default reporter dryRunEnd communicates N tests parallelization 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
• Max parallelization configured: [1m3[22m tests running at the same time
"
`;

exports[`Default reporter dryRunEnd communicates no parallelization (1 test at a time) 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
• Max parallelization configured: [1m1[22m test running at the same time
"
`;

exports[`Default reporter dryRunEnd does not communicate for uncapped orgs 1`] = `
"[1mDry Run Summary:[22m
• Would trigger [1m1[22m test
• Fail on timeout: [1mtrue[22m
• Fail on missing tests: [1mfalse[22m
• Fail on critical errors: [1mfalse[22m
• Batch timeout: [1m120000[22mms
"
`;

exports[`Default reporter renderApiRequestDescription dns result 1`] = `"Query for example.org"`;

exports[`Default reporter renderApiRequestDescription dns result 2`] = `"Query for example.org on server 1.2.3.4"`;

exports[`Default reporter renderApiRequestDescription dns result 3`] = `"Query for example.org on server 1.2.3.4:42"`;

exports[`Default reporter renderApiRequestDescription fallback 1`] = `"[1munknown-subtype[22m test"`;

exports[`Default reporter renderApiRequestDescription host + port, any subtype 1`] = `"Host: example.org:80"`;

exports[`Default reporter renderApiRequestDescription invalid dns result 1`] = `"Invalid DNS result"`;

exports[`Default reporter renderApiRequestDescription invalid http result 1`] = `"Invalid HTTP result"`;

exports[`Default reporter renderApiRequestDescription invalid http result 2`] = `"Invalid HTTP result"`;

exports[`Default reporter renderApiRequestDescription invalid http result 3`] = `"Invalid HTTP result"`;

exports[`Default reporter renderApiRequestDescription invalid multistep result 1`] = `"Invalid multistep result"`;

exports[`Default reporter renderApiRequestDescription invalid ssl result 1`] = `"Invalid SSL result"`;

exports[`Default reporter renderApiRequestDescription invalid ssl result 2`] = `"Invalid SSL result"`;

exports[`Default reporter renderApiRequestDescription invalid ssl result 3`] = `"Invalid SSL result"`;

exports[`Default reporter renderApiRequestDescription method + url, any subtype 1`] = `"[1mGET[22m - https://example.org"`;

exports[`Default reporter renderApiRequestDescription multistep result 1`] = `"Multistep test containing 3 HTTP test"`;

exports[`Default reporter renderApiRequestDescription multistep result 2`] = `"Multistep test containing 1 HTTP test, 1 SSL test, 1 DNS test"`;

exports[`Default reporter resultEnd 1 API test, 1 location, 1 result: success 1`] = `
"[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

"
`;

exports[`Default reporter resultEnd 1 API test, 1 location, 3 results: success, failed non-blocking, failed blocking 1`] = `
"[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

[1m[33m✖[39m[22m [[1m[33mnon-blocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[33mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=2&batch_id=123&from_ci=true[39m[22m
  [1m[33m✖[39m[22m [1m[33m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[33m  - Assertion failed:[39m[22m
[1m[33m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=3&batch_id=123&from_ci=true[39m[22m
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[31m  - Assertion failed:[39m[22m
[1m[31m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

"
`;

exports[`Default reporter resultEnd 3 API tests, 2 passed (1 from previous CI run) 1`] = `
"[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1001&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m
[2m  [1m[32m◀[39m[22m[2m Successful result from a [1m[32mprevious[39m[22m[2m CI batch:[22m
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=0002&batch_id=123&from_ci=true[39m[22m

[1m[32m✓[39m[22m [2m(edited) [22m[[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1003&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

"
`;

exports[`Default reporter resultEnd 3 Browser tests: failed blocking, timed out, global failure 1`] = `
"[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2mabc-def-ghi[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mLocation name[22m[1m[39m[22m - [1m[31mdevice: [1mchrome.laptop_large[22m[1m[39m[22m
  • Total duration: 22000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/abc-def-ghi/result/1?batch_id=123&from_ci=true[39m[22m
[31m    [[1mSTEP_TIMEOUT[22m] - [2mStep failed because it took more than 20 seconds.[22m[39m
    [1m[32m✓[39m[22m | [1m1000[22mms - Navigate to start URL
    [2mhttps://example.org/[22m
    [1m[31m✖[39m[22m | [1m1000[22mms - Navigate again
    [2mhttps://example.org/[22m
    [31m[2mNavigation failure[22m[39m
    [1m[31m✖[39m[22m | [1m[31m20000[39m[22mms - Assert
    [2mvalue[22m
    [31m[2mStep timeout[22m[39m
    [1m[33m⇢[39m[22m | 3 skipped steps

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2mabc-def-ghi[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mLocation name[22m[1m[39m[22m
  • View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/abc-def-ghi/result/1?batch_id=123&from_ci=true[39m[22m (not yet received)
[31m    [[1mTIMEOUT[22m] - [2mThe batch timed out before receiving the result.[22m[39m

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2mabc-def-ghi[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mLocation name[22m[1m[39m[22m
  • View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/abc-def-ghi/result/1?batch_id=123&from_ci=true[39m[22m
[31m    [[1mFAILURE_CODE[22m] - [2mFailure message[22m[39m

"
`;

exports[`Default reporter resultEnd Incomplete API and Browser tests - passed and failed 1`] = `
"[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1&batch_id=123&from_ci=true[39m[22m
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m

[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=2&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2mbbb-bbb-bbb[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m - [1m[31mdevice: [1mchrome.laptop_large[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/bbb-bbb-bbb/result/3?batch_id=123&from_ci=true[39m[22m

[1m[32m✓[39m[22m [[1m[2mbbb-bbb-bbb[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m - [1m[32mdevice: [1mchrome.laptop_large[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/bbb-bbb-bbb/result/4?batch_id=123&from_ci=true[39m[22m

"
`;

exports[`Default reporter resultEnd Retryable test - Edge case: fails, then retry times out 1`] = `
"[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m ([2mattempt 1 of 2, retrying…[22m)
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=0&batch_id=123&from_ci=true[39m[22m
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[31m  - Assertion failed:[39m[22m
[1m[31m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m ([2mattempt 2, done[22m)
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=0&batch_id=123&from_ci=true[39m[22m (previous attempt)
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m
[31m    [[1mTIMEOUT[22m] - [2mThe batch timed out before receiving the retry.[22m[39m

"
`;

exports[`Default reporter resultEnd Retryable test - Usual case: passes after 1 retry only 1`] = `
"[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m ([2mattempt 1 of 3, retrying…[22m)
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=0&batch_id=123&from_ci=true[39m[22m
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[31m  - Assertion failed:[39m[22m
[1m[31m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m ([2mattempt 2, done[22m)
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

"
`;

exports[`Default reporter resultEnd Retryable test - Usual case: passes after max retries 1`] = `
"[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m ([2mattempt 1 of 3, retrying…[22m)
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=0&batch_id=123&from_ci=true[39m[22m
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[31m  - Assertion failed:[39m[22m
[1m[31m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m ([2mattempt 2 of 3, retrying…[22m)
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1&batch_id=123&from_ci=true[39m[22m
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[31m  - Assertion failed:[39m[22m
[1m[31m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m ([2mattempt 3, done[22m)
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=2&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

"
`;

exports[`Default reporter runEnd Case where some outcomes are empty or missing 1`] = `
"[33m[1m1[22m test not found[39m [90m(bbb-bbb-bbb)[39m

View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
• Test Results: [32m[1m3[22m passed[39m, [31m[1m0[22m failed[39m, [33m[1m1[22m failed (non-blocking)[39m ([31m[1m1[22m critical errors[39m)
• Total Duration: 9m 28s
"
`;

exports[`Default reporter runEnd Case with 2 passed results, of which 1 comes from previous CI run 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
• Test Results: [32m[1m2[22m passed ([1m1[22m in a previous CI batch)[39m, [31m[1m0[22m failed[39m
• Selective rerun: ran 1 out of 2 tests
• Total Duration: 9m 28s
"
`;

exports[`Default reporter runEnd Complex case with all the tests and results outcomes possible 1`] = `
"[33m[1m2[22m tests not found[39m [90m(ccc-ccc-ccc, ddd-ddd-ddd)[39m

[31m[1m2[22m tests not authorized[39m [90m(aaa-aaa-aaa, bbb-bbb-bbb)[39m

View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=batch-id[39m[22m

[1mContinuous Testing Summary:[22m
• Test Results: [32m[1m2[22m passed ([1m1[22m in a previous CI batch)[39m, [31m[1m1[22m failed[39m, [33m[1m3[22m failed (non-blocking)[39m, [1m1[22m skipped ([33m[1m1[22m timed out[39m, [31m[1m2[22m critical errors[39m)
• Selective rerun: ran 5 out of 6 tests
• Total Duration: 9m 28s

View test runs in Test Optimization: [2m[36mhttps://app.datadoghq.com/ci/test-runs?query=%40test.framework%3Asynthetics%20%40ci.job.url%3A%22job-url%22[39m[22m
"
`;

exports[`Default reporter runEnd Simple case with 1 test with 1 result (passed) 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
• Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
• Total Duration: 9m 28s
"
`;

exports[`Default reporter runEnd communicates 2 tests parallelization 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
• Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
• Max parallelization configured: 2 tests running at the same time
• Total Duration: 9m 28s

View test runs in Test Optimization: [2m[36mhttps://app.datadoghq.com/ci/test-runs?query=%40test.framework%3Asynthetics%20%40ci.job.url%3A%22job-url%22[39m[22m

Increase your parallelization to reduce the CI batch duration: [2m[36mhttps://app.datadoghq.com/synthetics/settings/continuous-testing[39m[22m
"
`;

exports[`Default reporter runEnd communicates no parallelization (1 test at a time) 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
• Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
• Max parallelization configured: 1 test running at the same time
• Total Duration: 9m 28s

View test runs in Test Optimization: [2m[36mhttps://app.datadoghq.com/ci/test-runs?query=%40test.framework%3Asynthetics%20%40ci.job.url%3A%22job-url%22[39m[22m

Increase your parallelization to reduce the CI batch duration: [2m[36mhttps://app.datadoghq.com/synthetics/settings/continuous-testing[39m[22m
"
`;

exports[`Default reporter runEnd does not communicate for uncapped orgs 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
• Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
• Total Duration: 9m 28s

View test runs in Test Optimization: [2m[36mhttps://app.datadoghq.com/ci/test-runs?query=%40test.framework%3Asynthetics%20%40ci.job.url%3A%22job-url%22[39m[22m
"
`;

exports[`Default reporter testTrigger Blocking test, with 1 test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" [90m(1 test override)[39m
"
`;

exports[`Default reporter testTrigger Blocking test, with 2 test overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" [90m(2 test overrides)[39m
"
`;

exports[`Default reporter testTrigger Blocking test, without test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m"
"
`;

exports[`Default reporter testTrigger Non-blocking test from Datadog, with 1 test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(1 test override)[39m
"
`;

exports[`Default reporter testTrigger Non-blocking test from Datadog, with 2 test overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(2 test overrides)[39m
"
`;

exports[`Default reporter testTrigger Non-blocking test from Datadog, without test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking)
"
`;

exports[`Default reporter testTrigger Non-blocking test, with 1 test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(1 test override)[39m
"
`;

exports[`Default reporter testTrigger Non-blocking test, with 2 test overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(2 test overrides)[39m
"
`;

exports[`Default reporter testTrigger Skipped test from Datadog, with 1 test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m" because of execution rule configuration in Datadog
"
`;

exports[`Default reporter testTrigger Skipped test from Datadog, with 2 test overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m" because of execution rule configuration in Datadog
"
`;

exports[`Default reporter testTrigger Skipped test from Datadog, without test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m" because of execution rule configuration in Datadog
"
`;

exports[`Default reporter testTrigger Skipped test, with 1 test override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m"
"
`;

exports[`Default reporter testTrigger Skipped test, with 2 test overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m"
"
`;

exports[`Default reporter testsWait outputs triggered tests 1`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m


- Waiting for [1m[36m11[39m[22m tests [90m(abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, …)[39m…

"
`;

exports[`Default reporter testsWait outputs triggered tests with skipped count 1`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m


- Waiting for [1m[36m11[39m[22m tests (skipping [1m[36m3[39m[22m already successful) [90m(abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, …)[39m…

"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: false) 1`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m


 [36m⠋[39m Waiting for [1m[36m2[39m[22m tests [90m(aaa-aaa-aaa, bbb-bbb-bbb)[39m…
"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: false) 2`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m
[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=rid&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: false) 3`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m
[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=rid&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

 [36m⠙[39m Waiting for [1m[36m1[39m[22m test [90m(aaa-aaa-aaa)[39m…
"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: false) 4`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m
[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=rid&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m
 [36m⠹[39m Waiting for the batch to end…
"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: true) 1`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m

- Waiting for [1m[36m2[39m[22m tests [90m(aaa-aaa-aaa, bbb-bbb-bbb)[39m…

"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: true) 2`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m

- Waiting for [1m[36m2[39m[22m tests [90m(aaa-aaa-aaa, bbb-bbb-bbb)[39m…

[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=rid&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: true) 3`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m

- Waiting for [1m[36m2[39m[22m tests [90m(aaa-aaa-aaa, bbb-bbb-bbb)[39m…

[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=rid&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

- Waiting for [1m[36m1[39m[22m test [90m(aaa-aaa-aaa)[39m…


 [36m⠋[39m Waiting for [1m[36m1[39m[22m test [90m(aaa-aaa-aaa)[39m…
"
`;

exports[`Default reporter testsWait the spinner text is updated and cleared at the end (in CI: true) 4`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m

- Waiting for [1m[36m2[39m[22m tests [90m(aaa-aaa-aaa, bbb-bbb-bbb)[39m…

[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  • Total duration: 1000 ms - View test run details:
    ⎋ [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=rid&batch_id=123&from_ci=true[39m[22m
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

- Waiting for [1m[36m1[39m[22m test [90m(aaa-aaa-aaa)[39m…


 [36m⠋[39m Waiting for [1m[36m1[39m[22m test [90m(aaa-aaa-aaa)[39m…
- Waiting for the batch to end…


 [36m⠙[39m Waiting for the batch to end…
"
`;
